--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -19,6 +19,7 @@ Dark green: #28b062
 @import "base/_typography.scss";
 
 /* - COMPONENTS FOLDER FILES - */
+@import "components/_components-1.scss";
 
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_hotel-view-1.scss";
