--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -17,6 +17,7 @@
     --color-grey-light-2: #eee;
     --color-grey-light-3: #f1f0f0;
     --color-grey-light-4: #f4f2f2;
+    --color-grey-light-5: #949393;
 
     --color-white: #fff;
     --color-black: #000;
