Finished Styling the Sidebar. | Update #5 |

--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -15,9 +15,10 @@
 
     --color-grey-light-1: #f7f7f7;
     --color-grey-light-2: #eee;
-    --color-grey-light-3: #f1f0f0;
+    --color-grey-light-3: #faf9f9;
     --color-grey-light-4: #f4f2f2;
     --color-grey-light-5: #949393;
+    --color-grey-light-6: #ccc;
 
     --color-white: #fff;
     --color-black: #000;
