--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -43,9 +43,10 @@ $color-grey-light-3: #f1f0f0; */
   --color-grey-dark-3: #333;
   --color-grey-light-1: #f7f7f7;
   --color-grey-light-2: #eee;
-  --color-grey-light-3: #f1f0f0;
+  --color-grey-light-3: #faf9f9;
   --color-grey-light-4: #f4f2f2;
   --color-grey-light-5: #949393;
+  --color-grey-light-6: #ccc;
   --color-white: #fff;
   --color-black: #000;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
@@ -82,6 +83,8 @@ body {
 /* - COMPONENTS FOLDER FILES - */
 /* ------------------------------------------- */
 /* COMPONENTS-1 FOR HEADER OF THE TRILLO APP
+/* ------------------------------------------- */
+/* ------------------------------------------- */
 /* ------------------------------------------- */
 /* --- LOGO --- */
 .logo {
@@ -163,6 +166,55 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem; }
+  .side-nav__item {
+    position: relative; }
+    .side-nav__item:not(:last-child) {
+      margin-bottom: .5rem; }
+  .side-nav__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: .3rem;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s; }
+  .side-nav__item:hover::before, .side-nav__item--active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .side-nav__item:active::before {
+    background-color: var(--color-primary-light); }
+  .side-nav__link:link, .side-nav__link:visited {
+    color: var(--color-grey-light-3);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center; }
+  .side-nav__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; }
+
+/* ------------------------------------------- */
+/* ------------------------------------------- */
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-6);
+  text-align: center;
+  padding: 2.5rem; }
+
 /* - LAYOUT FOLDER FILES - */
 /* ------------------------------------------- */
 /* HOTEL VIEW | LAYOUT / PAGE
@@ -188,10 +240,14 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-3);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: var(--color-white);
+  height: 80rem;
   flex: 1; }
 
 /* - PAGES FOLDER FILES - */
