--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -13,6 +13,7 @@ Dark green: #28b062
 
 /* - ABSTRACTS FOLDER FILES - */
 @import "abstracts/_variables.scss";
+@import "abstracts/_animations.scss";
 
 /* - BASE FOLDER FILES - */
 @import "base/_base.scss";
@@ -20,6 +21,7 @@ Dark green: #28b062
 
 /* - COMPONENTS FOLDER FILES - */
 @import "components/_components-1.scss";
+@import "components/_button.scss";
 
 /* - LAYOUT FOLDER FILES - */
 @import "layout/_hotel-view-1.scss";
