--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -23,7 +23,12 @@
     --color-white: #fff;
     --color-black: #000;
 
+    // SHADOW BOX VARIABLE
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5rem rgba(0,0,0, .06);
+    
+    // BORDER BOTTOM VARIABLE
+    --line: 1px solid var(--color-grey-light-4);
 }
 
 *,
