--- a/resources/sass/components/_components-1.scss
+++ b/resources/sass/components/_components-1.scss
@@ -221,14 +221,14 @@
     }
 }
 
-/* ------------------------------------------- */
-// HOTE VIEW - OVERVIEW
-/* ------------------------------------------- */
+/* --------------------------------------------------- */
+// HOTE VIEW - OVERVIEW | NAVIGATION / TOP AND SIDEBAR
+/* --------------------------------------------------- */
 .overview {
 
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-4);
+    border-bottom: var(--line);
 
     &__heading {
         font-size: 2.25rem;
@@ -282,5 +282,84 @@
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+    }
+}
+
+/* ------------------------------------------------- */
+// HOTE VIEW - OVERVIEW | DESCRIPTION. CONTENT MAIN
+/* ------------------------------------------------- */
+
+// --- PARAGRAPH --- \\
+
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+// --- LIST --- \\
+
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+        flex: 0 0 50%;  // SPLITS ITEMS ON 2 SIDES. 4 IN FIRST COLUMNT & 4 IN SECOND COLUMN \\
+        margin-bottom: .7rem;
+    }
+
+    &__item::before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+
+        // OLDER BROWSERS
+       /* background-image: url(../images//chevron-thin-right.svg);
+        background-size: cover; */
+
+        // NEWER BROWSERS
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../images//chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        // WHEN MORE BROWESERS STARTS TO SUPPORT MASK
+        mask-image: url(../images//chevron-thin-right.svg);
+        mask-size: cover;
+    }
+}
+
+// --- RECOMMENDATIONS --- \\
+
+.recommend {
+
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-1);
+
+    display: flex;
+    align-items: center;    // CENTERS THE ELEMENTS HORIZONTALY
+
+    &__count {
+        margin-right: auto;     // CREATES A SPACE BETWEEN THE TEXT AND IMAGES. MARGIN TRICK \\
+    }
+
+    &__friends {
+
+    }
+
+    &__photo {
+        box-sizing: content-box;    // MAKES BOX SIZING DEFAULT. IMAGES NOW HAVE THE SIZE THAT WE DESCRIBED \\
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: .3rem solid var(--color-white);
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
     }
 }
