--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -22,3 +22,41 @@ $color-black: #000; */
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 $color-grey-light-3: #f1f0f0; */
+
+// CCS3 KIND OF VARIABLES \\
+:root {
+    --color-primary:#eb2f64;
+    --color-primary-light: #ff3366;
+    --color-primary-dark: #ba265d;
+
+    
+    --color-grey-dark-1: #777;
+    --color-grey-dark-2: #999;
+    --color-grey-dark-3: #333;
+
+    --color-grey-light-1: #f7f7f7;
+    --color-grey-light-2: #eee;
+    --color-grey-light-3: #faf9f9;
+    --color-grey-light-4: #f4f2f2;
+    --color-grey-light-5: #949393;
+    --color-grey-light-6: #ccc;
+
+    --color-white: #fff;
+    --color-black: #000;
+
+    // SHADOW BOX VARIABLE
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5rem rgba(0,0,0, .06);
+    
+    // BORDER BOTTOM VARIABLE
+    --line: 1px solid var(--color-grey-light-4);
+}
+
+// SASS VARIABLES \\
+
+// MEDIA QUERIES - BREAKPOINTS \\
+$bp-largest: 75em;          // 1200px
+$bp-large: 68.75em;         // 1100px
+$bp-medium: 56.25em;        // 900px
+$bp-small: 37.5em;          // 600px
+$bp-smallest: 31.25em       // 500px
