--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -15,6 +15,72 @@
 
     &:hover {
         color: var(--color-grey-dark-1);
+
+        // ANIMATION FOR "SHOW ALL" REVIEW BUTTON ON HOVER \\
+        span {
+            margin-left: .8rem;
+        }
+    }
+
+    &:focus {
+        outline: none;
+        animation: pulsate 1s infinite;
+    }
+
+    // SETUP THE ANIMATION FOR "SHOW ALL" REVIEW BUTTON \\
+    & span {
+        margin-left: .3rem;
+        transition: margin-left .2s;
+    }
+}
+
+/* ------------------------------------------- */
+// BUTTON FOR CTA
+/* ------------------------------------------- */
+
+.btn {
+
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 10rem;
+    border: none;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: var(--color-white);
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    // SELECTS ALL OF THE CHILD ELEMENTS \\
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        top: -100%;
+    }
+
+    // FUNCTIONALITY FOR THE BUTTON \\
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+
+    &:hover &__visible  {
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
     }
 
     &:focus {
