--- a/resources/sass/components/_components-1.scss
+++ b/resources/sass/components/_components-1.scss
@@ -392,16 +392,20 @@
         margin-right: .7rem;
 
         // OLDER BROWSERS
-       /* background-image: url(../images//chevron-thin-right.svg);
-        background-size: cover; */
+        background-image: url(../images//chevron-thin-right.svg);
+        background-size: cover;
 
         // NEWER BROWSERS
-        background-color: var(--color-primary);
-        -webkit-mask-image: url(../images//chevron-thin-right.svg);
-        -webkit-mask-size: cover;
-        // WHEN MORE BROWESERS STARTS TO SUPPORT MASK
-        mask-image: url(../images//chevron-thin-right.svg);
-        mask-size: cover;
+        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../images//chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            // WHEN MORE BROWESERS STARTS TO SUPPORT MASK
+            mask-image: url(../images//chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;     // FIXES THE CHROME ICON BUG
+        }
+
     }
 }
 
